<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="-8dp"
        android:layout_marginLeft="-8dp"
        android:layout_marginEnd="-8dp"
        android:layout_marginRight="-8dp"
        android:background="@drawable/ic_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/formCardView"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:hint="@string/email" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editLoginSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editLoginEmail"
                    android:inputType="textPassword"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:hint="@string/senha"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editLoginEmail" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLoginLogar"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_below="@+id/editLoginSenha"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="45dp"
                    android:background="@drawable/ic_button"
                    android:text="@string/logar"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editLoginSenha" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLoginCadastrar"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_below="@+id/editLoginSenha"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/ic_button"
                    android:text="@string/registrar"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editLoginSenha"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editLoginSenha"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/esqueci_minha_senha" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>